ランクのバグを修正して再ビルド

--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,9 @@
   </head>
   <body>
     <div id="app"></div>
+    <!--shinobi1-->
+    <script type="text/javascript" src="//xa.shinobi.jp/ufo/185669701"></script>
+    <noscript><a href="//xa.shinobi.jp/bin/gg?185669701" target="_blank"><img src="//xa.shinobi.jp/bin/ll?185669701" border="0"></a><br><span style="font-size:9px"><img style="margin:0;vertical-align:text-bottom;" src="//img.shinobi.jp/tadaima/fj.gif" width="19" height="11"> </span></noscript>
+    <!--shinobi2-->
   </body>
 </html>
